electric-pair-mode enabled and keybindings

--- a/emacs.d/settings.org
+++ b/emacs.d/settings.org
@@ -55,10 +55,15 @@
      #+END_SRC
 * Org mode
 ** Codes
+   
 *** Keybindings
     #+begin_src emacs-lisp
       (define-key org-mode-map (kbd "< s TAB")  '(lambda () (interactive) (org-insert-structure-template "src")))
     #+end_src   
+*** Minor Electric-pair mode
+    #+begin_src emacs-lisp
+      (electric-pair-mode 1)
+    #+end_src
 * ivy + swiper + counsel
 ** description
    github repo : https://github.com/abo-abo/swiper ivy + swiper + counsel in an
@@ -141,6 +146,15 @@
      (require 'cask "/usr/local/share/emacs/site-lisp/cask/cask.el")
      (cask-initialize)
    #+end_src
+* Other Keybindings
+** Codes
+   #+begin_src emacs-lisp
+     (global-set-key (kbd "M-SPC") 'hippie-expand)
+     (global-set-key (kbd "DEL") 'backward-delete-char)
+     (global-set-key (kbd "C-z") 'replace-string)
+     (global-set-key (kbd "C-x O") (lambda ()
+                                     (interactive)
+                                     (other-window -1)))
+     (global-set-key (kbd "M-§")  'other-frame)
+   #+end_src
 
-   
-   
