--- a/zsh_history_setup.org
+++ b/zsh_history_setup.org
@@ -431,6 +431,7 @@
     https://iterm2.com/shell_integration/install_shell_integration.sh |
     bash
   - brew install git\
+  - sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
   - brew install zsh-syntax-highlighting\
   - brew install romkatv/powerlevel10k/powerlevel10k\
   - brew install zsh-autosuggestions\
