--- a/emacs.d/settings.org
+++ b/emacs.d/settings.org
@@ -159,3 +159,23 @@
                                      (other-window -1)))
      (global-set-key (kbd "M-§")  'other-frame)
    #+end_src
+
+
+** ido
+
+*** description
+Interactive DO.
+
+*** codes
+
+    #+BEGIN_SRC emacs-lisp
+    (ido-mode 1)
+    (setq ido-everywhere t)
+    (setq ido-enable-flex-matching t)
+    (setq ido-use-filename-at-point 'guess)
+    (setq ido-create-new-buffer 'always)
+    (setq ido-file-extension-order '(".org", ".txt", ".csv"))
+    (global-hl-line-mode 1)
+    (setq ido-auto-merge-delay-time 1)
+    #+END_SRC 
+   
