--- a/zsh_history_setup.org
+++ b/zsh_history_setup.org
@@ -474,10 +474,16 @@
 
   
 * Notes
+
   - check for configuration of pyvenv in spacemacs, to enable
     include-system-site-packages = true
     - solution: Add include-system-site-packages = true to pyvenv.cfg
-    
+
+  - Installed Jupyterlab in pyenv version of python
+    - needs to downgrade nbconvert to nbconvert==5.6.1
+      python -m pip install --upgrade nbconvert==5.6.1
+      https://github.com/jupyter/nbconvert/issues/1430
+  
 * TODO
 
   - 
