--- a/emacs.d/settings.org
+++ b/emacs.d/settings.org
@@ -167,6 +167,7 @@
                                      (interactive)
                                      (other-window -1)))
      (global-set-key (kbd "M-§")  'other-frame)
+     (global-set-key (kbd "s-m") 'move-end-of-line)
    #+end_src
 
 
