--- a/zsh_history_setup.org
+++ b/zsh_history_setup.org
@@ -483,6 +483,8 @@
     - needs to downgrade nbconvert to nbconvert==5.6.1
       python -m pip install --upgrade nbconvert==5.6.1
       https://github.com/jupyter/nbconvert/issues/1430
+
+  - Changed keybinding of command-m to end-of-line
   
 * TODO
 
