--- a/zsh_history_setup.org
+++ b/zsh_history_setup.org
@@ -485,6 +485,8 @@
       https://github.com/jupyter/nbconvert/issues/1430
 
   - Changed keybinding of command-m to end-of-line
+
+  - added set -o ignoreeof to zshrc to avoid accidental exit of shell
   
 * TODO
 
