docker version updated / spacemacs to vim

--- a/emacs.d/settings.org
+++ b/emacs.d/settings.org
@@ -20,7 +20,7 @@
      #+BEGIN_SRC emacs-lisp
        ;; https://www.emacswiki.org/emacs/DiredOmitMode C-x M-o is the keybinding
        (add-hook 'dired-load-hook '(lambda () (require 'dired-x))) ; Load Dired X when Dired is loaded.
-       (setq dired-omit-mode nil) ; Turn on Omit mode.
+       (setq dired-omit-mode t) ; Turn on Omit mode.
        (require 'dired-x)
        (setq-default dired-omit-files-p t) ; Buffer-local variable
        (setq dired-omit-files (concat dired-omit-files "\\|^\\..+$"))
