--- a/emacs.d/settings.org
+++ b/emacs.d/settings.org
@@ -52,6 +52,7 @@
        (global-set-key (kbd "C-c @ SPC") 'hs-show-all)
        (global-set-key (kbd "C-c @ h") 'hs-hide-block)
        (global-set-key (kbd "C-c @ s") 'hs-show-block)
+       (global-set-key (kbd "C-<tab>") 'hippie-expand)
      #+END_SRC
 * Org mode
 ** Codes
